# Kylin

./: README.md
assets/CoreData/Shaders/GLSL/: PBR.glsl  PBRLitSolid.glsl
assets/Data/: CommandLine.txt
assets/Data/ERA/: buildings.plist  comics.plist  creatures.plist  gui.plist
assets/Data/LuaScripts/: 02_HelloGUI.lua  32_Urho2DConstraints.lua  41_DatabaseDemo.lua  47_Typography.lua  48_Hello3DUI.lua  49_Urho2DIsometricDemo.lua  50_Urho2DPlatformer.lua  51_Urho2DStretchableSprite.lua  kylin.lua
assets/Data/LuaScripts/Utilities/: ScriptCompiler.lua
assets/Data/LuaScripts/Utilities/2D/: Sample2D.lua
assets/Data/Scenes/: PBRExample.xml
assets/Data/UI/: UIExample.xml
code/game/: Urho3DPlayer.cpp  Urho3DPlayer.h
player/android/: local.properties
player/android/app/: AndroidManifest.xml  CMakeLists.txt  build.gradle
player/android/gradle/wrapper/: gradle-wrapper.properties
player/ios/kylin/: Info.plist
player/ios/kylin.xcodeproj/: project.pbxproj
